crates/sigil-compiler/tests/snapshots/snap_air__record_with_two_fields.snap
---
source: crates/sigil-compiler/tests/snap_air.rs
expression: "&comp.air"
---
AirProgram {
    functions: [
        AirFunction {
            name: "m::make_origin",
            export_name: "m__make_origin",
            ring: Inner,
            kind: ModuleFunction,
            params: [],
            ret: Ptr,
            locals: [
                (
                    VarId(
                        0,
                    ),
                    Ptr,
                ),
                (
                    VarId(
                        1,
                    ),
                    I64,
                ),
                (
                    VarId(
                        2,
                    ),
                    I64,
                ),
            ],
            value_kinds: {
                VarId(
                    0,
                ): Copy,
                VarId(
                    1,
                ): Copy,
                VarId(
                    2,
                ): Copy,
            },
            debug_names: {
                VarId(
                    0,
                ): "v0",
                VarId(
                    1,
                ): "v1",
                VarId(
                    2,
                ): "v2",
            },
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                1,
                            ),
                            val: IntLit(
                                0,
                            ),
                        },
                        Assign {
                            dst: VarId(
                                2,
                            ),
                            val: IntLit(
                                0,
                            ),
                        },
                        FuelDecrement {
                            amount: 1,
                        },
                        BumpAlloc {
                            dst: VarId(
                                0,
                            ),
                            size_bytes: 16,
                            align: 8,
                            persistent: false,
                        },
                        StoreField {
                            base_ptr: VarId(
                                0,
                            ),
                            offset: 0,
                            val: VarId(
                                1,
                            ),
                            ty: I64,
                        },
                        StoreField {
                            base_ptr: VarId(
                                0,
                            ),
                            offset: 8,
                            val: VarId(
                                2,
                            ),
                            ty: I64,
                        },
                    ],
                    terminator: Return(
                        Some(
                            VarId(
                                0,
                            ),
                        ),
                    ),
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
    ],
}
