crates/sigil-compiler/tests/snapshots/snap_air__trap_diverges_terminates_block.snap
---
source: crates/sigil-compiler/tests/snap_air.rs
expression: "&comp.air"
---
AirProgram {
    functions: [
        AirFunction {
            name: "m::always_abort",
            export_name: "m__always_abort",
            ring: Inner,
            kind: ModuleFunction,
            params: [],
            ret: I64,
            locals: [
                (
                    VarId(
                        0,
                    ),
                    Unit,
                ),
                (
                    VarId(
                        1,
                    ),
                    Bool,
                ),
            ],
            value_kinds: {
                VarId(
                    0,
                ): Copy,
                VarId(
                    1,
                ): Copy,
            },
            debug_names: {
                VarId(
                    0,
                ): "v0",
                VarId(
                    1,
                ): "__trap",
            },
            blocks: [
                AirBlock {
                    id: BlockId(
                        0,
                    ),
                    stmts: [
                        Assign {
                            dst: VarId(
                                1,
                            ),
                            val: IntLit(
                                1,
                            ),
                        },
                        TrapIf {
                            cond: VarId(
                                1,
                            ),
                        },
                    ],
                    terminator: Unreachable,
                },
            ],
            entry_block: BlockId(
                0,
            ),
        },
    ],
}
